@@ -540,8 +540,7 @@ ACE_Thread_Manager::spawn_i (ACE_THR_FUNC func,
                              int grp_id,
                              void *stack,
                              size_t stack_size,
-                             ACE_Task_Base *task,
-                             bool inherit_priority)
+                             ACE_Task_Base *task)
 {
   // First, threads created by Thread Manager should not be daemon threads.
   // Using assertion is probably a bit too strong.  However, it helps
@@ -612,37 +611,6 @@ ACE_Thread_Manager::spawn_i (ACE_THR_FUNC func,
   // removing this Thread Descriptor before it gets put into our
   // thread table.
 
-  if (inherit_priority)
-    {
-      int tmp_priority;
-      int sched_policy = ACE_SCHED_OTHER;
-
-      // Get the system policy and priority
-      ACE_hthread_t thr_handle;
-      ACE_Thread::self (thr_handle);
-      if (ACE_Thread::getprio (
-                             thr_handle,
-                             tmp_priority,
-                             sched_policy) == -1)
-        {
-          priority = ACE_DEFAULT_THREAD_PRIORITY;
-        }
-      else
-        {
-          priority = tmp_priority;
-        }
-
-      ACE_DEBUG ((LM_DEBUG,
-                  "(%P|%t) xxx \n"));
-      if (sched_policy ==  ACE_SCHED_FIFO)
-        ACE_SET_BITS (flags, THR_SCHED_FIFO);
-      else if (sched_policy == ACE_SCHED_RR)
-        ACE_SET_BITS (flags, THR_SCHED_FIFO);
-      else
-        ACE_SET_BITS (flags, THR_SCHED_DEFAULT);
-
-    }
-
   int result = ACE_Thread::spawn (func,
                                   args,
                                   flags,
@@ -707,8 +675,7 @@ ACE_Thread_Manager::spawn (ACE_THR_FUNC func,
                            long priority,
                            int grp_id,
                            void *stack,
-                           size_t stack_size,
-                           bool inherit_priority)
+                           size_t stack_size)
 {
   ACE_TRACE ("ACE_Thread_Manager::spawn");
 
@@ -726,8 +693,7 @@ ACE_Thread_Manager::spawn (ACE_THR_FUNC func,
                      grp_id,
                      stack,
                      stack_size,
-                     0,
-                     inherit_priority) == -1)
+                     0) == -1)
     return -1;
 
   return grp_id;
@@ -745,8 +711,7 @@ ACE_Thread_Manager::spawn_n (size_t n,
                              ACE_Task_Base *task,
                              ACE_hthread_t thread_handles[],
                              void *stack[],
-                             size_t stack_size[],
-                             bool inherit_priority)
+                             size_t stack_size[])
 {
   ACE_TRACE ("ACE_Thread_Manager::spawn_n");
   ACE_MT (ACE_GUARD_RETURN (ACE_Thread_Mutex, ace_mon, this->lock_, -1));
@@ -767,8 +732,7 @@ ACE_Thread_Manager::spawn_n (size_t n,
                          grp_id,
                          stack == 0 ? 0 : stack[i],
                          stack_size == 0 ? 0 : stack_size[i],
-                         task,
-                         inherit_priority) == -1)
+                         task) == -1)
         return -1;
     }
 
@@ -788,8 +752,7 @@ ACE_Thread_Manager::spawn_n (ACE_thread_t thread_ids[],
                              void *stack[],
                              size_t stack_size[],
                              ACE_hthread_t thread_handles[],
-                             ACE_Task_Base *task,
-                             bool inherit_priority)
+                             ACE_Task_Base *task)
 {
   ACE_TRACE ("ACE_Thread_Manager::spawn_n");
   ACE_MT (ACE_GUARD_RETURN (ACE_Thread_Mutex, ace_mon, this->lock_, -1));
@@ -810,8 +773,7 @@ ACE_Thread_Manager::spawn_n (ACE_thread_t thread_ids[],
                          grp_id,
                          stack == 0 ? 0 : stack[i],
                          stack_size == 0 ? 0 : stack_size[i],
-                         task,
-                         inherit_priority) == -1)
+                         task) == -1)
         return -1;
     }
 
